Rename pgbackrest-plugin to use controller instead
This will help to make the difference between the pgbackrest controller
running on the cnpg namespace and the container dedicated to an
instance (running on the same Pod as the PostgreSQL instances).

--- a/instance.yml
+++ b/instance.yml
@@ -15,7 +15,7 @@ metadata:
 spec:
   instances: 1
   plugins:
-    - name: cnpg-i-pgbackrest.dalibo.com
+    - name: pgbackrest.dalibo.com
       parameters:
         s3-bucket: demo-pgbackrest
         s3-endpoint: xxx
