--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -4,11 +4,11 @@ kind: Service
 metadata:
   namespace: cnpg-system
   labels:
-    app: pgbackrest
-    cnpg.io/pluginName: cnpg-i-pgbackrest.dalibo.com
+    app: pgbackrest-controller
+    cnpg.io/pluginName: pgbackrest.dalibo.com
   annotations:
-    cnpg.io/pluginClientSecret: pgbackrest-client-tls
-    cnpg.io/pluginServerSecret: pgbackrest-server-tls
+    cnpg.io/pluginClientSecret: pgbackrest-controller-client-tls
+    cnpg.io/pluginServerSecret: pgbackrest-controller-server-tls
     cnpg.io/pluginPort: '9090'
   name: pgbackrest
 spec:
@@ -17,4 +17,4 @@ spec:
       protocol: TCP
       targetPort: 9090
   selector:
-    app: pgbackrest
+    app: pgbackrest-controller
