--- a/kubernetes/serviceaccount.yaml
+++ b/kubernetes/serviceaccount.yaml
@@ -3,14 +3,14 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app.kubernetes.io/name: plugin-pgbackrest
-  name: plugin-pgbackrest
+    app.kubernetes.io/name: pgbackrest-controller
+  name: pgbackrest-controller
   namespace: cnpg-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: plugin-pgbackrest
+  name: pgbackrest-controller
 rules:
   - apiGroups:
       - ''
