Add e2e test infrastructure
Add some code to setup test environment through `go test` and add a
first basic test to verify our plugin can be deployed.

The test environment is composed of:

- the CNPG operator, which is currently installed through os.Cmd and
  kubectl apply
- cert-manager (same here, also installed with kubectl apply command)
- minio, deployed through some golang resources definition. That
  component will be used for WAL archiving and backup of clusters
  created on our tests.

Also add a way to configure pgbackrest to:
- Avoid TLS verification when using s3 over https (required to run our
  test with minio)
- Use s3-uri-style and set it to path (for our tests), because it's not
  easy to define multiple domain and subdomain for a (minio) Kubernetes
  Service

--- a/examples/instance.yml
+++ b/examples/instance.yml
@@ -5,8 +5,8 @@ metadata:
   name: pgbackrest-s3-secret
 type: Opaque
 stringData:
-  key: xxx
-  key-secret: xxx
+  key: minioKey
+  key-secret: minioSecret
 ---
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
@@ -15,15 +15,17 @@ metadata:
 spec:
   # set to Never, because we use kind and image should be loaded on
   # the Kubernetes cluster and not pulled from an external registry.
-  imagePullPolicy: Never
+  imagePullPolicy: IfNotPresent
   instances: 1
   plugins:
     - name: pgbackrest.dalibo.com
       parameters:
-        s3-bucket: demo-pgbackrest
-        s3-endpoint: xxx
-        s3-region: xxx
-        s3-repo-path: /demo-pgbackrest-4/cluster-demo
+        s3-bucket: demo
+        s3-endpoint: s3.minio.svc.cluster.local
+        s3-region: us-east-1
+        s3-repo-path: /cluster-demo
+        s3-verify-tls: "false"
+        s3-uri-style: path
         stanza: pgbackrest
   storage:
     size: 1Gi
