--- a/REUSE.toml
+++ b/REUSE.toml
@@ -5,7 +5,7 @@
 version = 1
 
 [[annotations]]
-path = ["examples/**", "kubernetes/**", "go.sum", "go.mod"]
+path = ["examples/**", "kubernetes/**", ".github/workflows/**", "go.sum", "go.mod"]
 SPDX-FileCopyrightText = "2025 Dalibo"
 SPDX-License-Identifier = "Apache-2.0"
 precedence = "override"
