Align example secret with the one used on e2e tests

--- a/examples/instance.yml
+++ b/examples/instance.yml
@@ -6,7 +6,7 @@ metadata:
 type: Opaque
 stringData:
   key: minioKey
-  key-secret: minioSecret
+  key-secret: minioKey
 ---
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
