Implement restore stuff
Refactor (mainly how we inject env var) to add restore command. We also
add the restore command and the WAL service.

--- a/kubernetes/serviceaccount.yaml
+++ b/kubernetes/serviceaccount.yaml
@@ -22,3 +22,43 @@ rules:
       - get
       - list
       - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: pgbackrest-controller
+  namespace: cnpg-system
+rules:
+  - apiGroups:
+      - ''
+    resources:
+      - events
+    verbs:
+      - create
+      - patch
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: pgbackrest-controller
+  namespace: cnpg-system
+subjects:
+  - kind: ServiceAccount
+    name: pgbackrest-controller
+    namespace: cnpg-system
+roleRef:
+  kind: Role
+  name: pgbackrest-controller
+  apiGroup: rbac.authorization.k8s.io
