Deeply rewrite the plugin
We now use a CRD to define our PgBackrest configuration / repo. Tests
were modified to also check we can backup an instance. Env vars are no
longer directly attached to the pgbackrest dedicated container.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -19,4 +19,4 @@ jobs:
         run: kind version
       - uses: actions/checkout@v4
       - name: Run e2e tests
-        run: make clean-kind-e2e-cluster test-e2e
+        run: make test-e2e
