--- a/examples/restored_instance.yml
+++ b/examples/restored_instance.yml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: pgbackrest-s3-secret
+  name: minio
 type: Opaque
 stringData:
-  key: minioKey
-  key-secret: minioKey
+  ACCESS_KEY_ID: minioKey
+  ACCESS_SECRET_KEY: minioKey
 ---
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
@@ -20,13 +20,7 @@ spec:
   plugins:
     - name: pgbackrest.dalibo.com
       parameters:
-        s3-bucket: demo
-        s3-endpoint: s3.minio.svc.cluster.local
-        s3-region: us-east-1
-        s3-repo-path: /cluster-demo
-        s3-verify-tls: "false"
-        s3-uri-style: path
-        stanza: pgbackrest
+        repositoryRef: repository-sample
   storage:
     size: 1Gi
   bootstrap:
@@ -36,3 +30,5 @@ spec:
     - name: origin
       plugin:
         name: pgbackrest.dalibo.com
+        parameters:
+          repositoryRef: recovery-repository-sample
