--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -6,16 +6,23 @@ jobs:
   unit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Clone the code
+        uses: actions/checkout@v4
+      - name: List file
+        run: find .
       - name: Setup Go 1.25.x
         uses: actions/setup-go@v5
         with:
           go-version: 1.25.x
+
       - name: Display Go version
         run: go version
+
       - name: Install dependencies
         run: go get .
+
       - name: Try to build
         run: go build -v .
+
       - name: Run unit tests
         run: go test ./internal/...
