--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -14,15 +14,11 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: 1.25.x
-
       - name: Display Go version
         run: go version
-
       - name: Install dependencies
-        run: go get .
-
+        run: go mod titdy
       - name: Try to build
         run: go build -v .
-
       - name: Run unit tests
         run: go test ./internal/...
