Use kustomize to handle plugin manifests
We also adapt our test to use a specific overlay (replacing the image
policy).

--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - certificate.yaml
   - deployment.yaml
   - service.yaml
-  - ../config/crd
-  - ../config/rbac
+  - ../../config/crd
+  - ../../config/rbac
