--- a/config/crd/bases/pgbackrest.dalibo.com_repositories.yaml
+++ b/config/crd/bases/pgbackrest.dalibo.com_repositories.yaml
@@ -272,6 +272,108 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
+              recoveryWindow:
+                properties:
+                  firstBackup:
+                    properties:
+                      archive:
+                        properties:
+                          start:
+                            type: string
+                          stop:
+                            type: string
+                        required:
+                        - start
+                        - stop
+                        type: object
+                      label:
+                        type: string
+                      lsn:
+                        properties:
+                          start:
+                            type: string
+                          stop:
+                            type: string
+                        required:
+                        - start
+                        - stop
+                        type: object
+                      prior:
+                        type: string
+                      timestamp:
+                        properties:
+                          start:
+                            format: int64
+                            type: integer
+                          stop:
+                            format: int64
+                            type: integer
+                        required:
+                        - start
+                        - stop
+                        type: object
+                      type:
+                        type: string
+                    required:
+                    - archive
+                    - label
+                    - lsn
+                    - prior
+                    - timestamp
+                    - type
+                    type: object
+                  lastBackup:
+                    properties:
+                      archive:
+                        properties:
+                          start:
+                            type: string
+                          stop:
+                            type: string
+                        required:
+                        - start
+                        - stop
+                        type: object
+                      label:
+                        type: string
+                      lsn:
+                        properties:
+                          start:
+                            type: string
+                          stop:
+                            type: string
+                        required:
+                        - start
+                        - stop
+                        type: object
+                      prior:
+                        type: string
+                      timestamp:
+                        properties:
+                          start:
+                            format: int64
+                            type: integer
+                          stop:
+                            format: int64
+                            type: integer
+                        required:
+                        - start
+                        - stop
+                        type: object
+                      type:
+                        type: string
+                    required:
+                    - archive
+                    - label
+                    - lsn
+                    - prior
+                    - timestamp
+                    - type
+                    type: object
+                required:
+                - firstBackup
+                - lastBackup
+                type: object
             type: object
         required:
         - spec
