--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -17,7 +17,7 @@ rules:
 - apiGroups:
   - pgbackrest.dalibo.com
   resources:
-  - repositories
+  - stanzas
   verbs:
   - create
   - delete
@@ -29,13 +29,13 @@ rules:
 - apiGroups:
   - pgbackrest.dalibo.com
   resources:
-  - repositories/finalizers
+  - stanzas/finalizers
   verbs:
   - update
 - apiGroups:
   - pgbackrest.dalibo.com
   resources:
-  - repositories/status
+  - stanzas/status
   verbs:
   - get
   - patch
