--- a/config/rbac/stanza_admin_role.yaml
+++ b/config/rbac/stanza_admin_role.yaml
@@ -11,17 +11,17 @@ metadata:
   labels:
     app.kubernetes.io/name: cnpg-i-pgbackrest
     app.kubernetes.io/managed-by: kustomize
-  name: repository-admin-role
+  name: stanza-admin-role
 rules:
 - apiGroups:
   - pgbackrest.dalibo.com
   resources:
-  - repositories
+  - stanzas
   verbs:
   - '*'
 - apiGroups:
   - pgbackrest.dalibo.com
   resources:
-  - repositories/status
+  - stanzas/status
   verbs:
   - get
