--- a/config/crd/bases/pgbackrest.dalibo.com_stanzas.yaml
+++ b/config/crd/bases/pgbackrest.dalibo.com_stanzas.yaml
@@ -4,20 +4,20 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.19.0
-  name: repositories.pgbackrest.dalibo.com
+  name: stanzas.pgbackrest.dalibo.com
 spec:
   group: pgbackrest.dalibo.com
   names:
-    kind: Repository
-    listKind: RepositoryList
-    plural: repositories
-    singular: repository
+    kind: Stanza
+    listKind: StanzaList
+    plural: stanzas
+    singular: stanza
   scope: Namespaced
   versions:
   - name: v1
     schema:
       openAPIV3Schema:
-        description: Repository is the Schema for the repositories API
+        description: Stanza is the Schema for the stanzas API
         properties:
           apiVersion:
             description: |-
@@ -37,10 +37,10 @@ spec:
           metadata:
             type: object
           spec:
-            description: spec defines the desired state of Repository
+            description: spec defines the desired state of Stanza
             properties:
-              repoConfiguration:
-                description: Define pgbackrest repository
+              stanzaConfiguration:
+                description: Define pgbackrest stanza
                 properties:
                   archive:
                     properties:
@@ -54,6 +54,9 @@ spec:
                         pattern: ^(0B|[0-9]+(KiB|MiB|GiB|TiB)|([0-4])PiB)$
                         type: string
                     type: object
+                  name:
+                    minLength: 1
+                    type: string
                   processMax:
                     default: 1
                     type: integer
@@ -77,7 +80,7 @@ spec:
                           minLength: 1
                           type: string
                         retentionPolicy:
-                          description: Define retention strategy for a repository
+                          description: Define retention strategy for a repository.
                           properties:
                             archive:
                               description: |-
@@ -191,21 +194,18 @@ spec:
                       - repoPath
                       type: object
                     type: array
-                  stanza:
-                    minLength: 1
-                    type: string
                 required:
-                - stanza
+                - name
                 type: object
             required:
-            - repoConfiguration
+            - stanzaConfiguration
             type: object
           status:
-            description: status defines the observed state of Repository
+            description: status defines the observed state of Stanza
             properties:
               conditions:
                 description: |-
-                  conditions represent the current state of the Repository resource.
+                  conditions represent the current state of the Stanza resource.
                   Each condition has a unique type and reflects the status of a specific aspect of the resource.
 
                   Standard condition types include:
