--- a/examples/instance.yml
+++ b/examples/instance.yml
@@ -22,6 +22,6 @@ spec:
       enabled: true
       isWALArchiver: true
       parameters:
-        repositoryRef: repository-sample
+        stanzaRef: stanza-sample
   storage:
     size: 1Gi
