--- a/examples/instance.yml
+++ b/examples/instance.yml
@@ -7,6 +7,7 @@ type: Opaque
 stringData:
   ACCESS_KEY_ID: minioKey
   ACCESS_SECRET_KEY: minioKey
+  ENCRYPTION_PASS: 3nCryptI0nk3y
 ---
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
