Fix left-over after renaming CRD repo to stanza

--- a/examples/replica_instance.yml
+++ b/examples/replica_instance.yml
@@ -19,4 +19,4 @@ spec:
       plugin:
         name: pgbackrest.dalibo.com
         parameters:
-          repositoryRef: repository-sample
+          stanzaRef: stanza-sample
