Add basic documentation built with Docusaurus
We also:

- Add a new menu and rewrite the contribute page;
- Add readthedoc configuration file;
- Move page markdown page on specific folder

Signed-off-by: Pierrick Chovelon <pierrick.chovelon@dalibo.com>

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -12,6 +12,7 @@ path = [
     "PROJECT",
     "manifest.yaml",
     "config/**",
+    "docs/**",
     "examples/**",
     "kubernetes/**",
     ".github/workflows/**",
