Add more consistency
Signed-off-by: Pierrick Chovelon <pierrick.chovelon@dalibo.com>

--- a/examples/backup.yaml
+++ b/examples/backup.yaml
@@ -2,10 +2,10 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Backup
 metadata:
-  name: backup-example
+  name: backup-sample
 spec:
   method: plugin
   pluginConfiguration:
     name: pgbackrest.dalibo.com
   cluster:
-    name: cluster-demo
+    name: cluster-sample
