--- a/examples/schedule_backup.yaml
+++ b/examples/schedule_backup.yaml
@@ -2,11 +2,11 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: ScheduledBackup
 metadata:
-  name: backup-example
+  name: scheduled-backup-example
 spec:
   method: plugin
   pluginConfiguration:
     name: pgbackrest.dalibo.com
   cluster:
-    name: cluster-demo
+    name: cluster-sample
   schedule: "0 15 * * * *"
