Add backupType parameter support (full/diff/incr)

--- a/examples/backup.yaml
+++ b/examples/backup.yaml
@@ -5,7 +5,10 @@ metadata:
   name: backup-sample
 spec:
   method: plugin
+  target: primary
   pluginConfiguration:
     name: pgbackrest.dalibo.com
+    parameters:
+      backupType: full  # full, diff or incr (default: incr)
   cluster:
     name: cluster-sample
