Add backups count in stanza status and Prometheus
Signed-off-by: Pierrick Chovelon <pierrick.chovelon@dalibo.com>

--- a/config/crd/bases/pgbackrest.dalibo.com_stanzas.yaml
+++ b/config/crd/bases/pgbackrest.dalibo.com_stanzas.yaml
@@ -407,6 +407,19 @@ spec:
           status:
             description: status defines the observed state of Stanza
             properties:
+              backupsCount:
+                properties:
+                  Diff:
+                    type: integer
+                  Full:
+                    type: integer
+                  Incr:
+                    type: integer
+                required:
+                - Diff
+                - Full
+                - Incr
+                type: object
               conditions:
                 description: |-
                   conditions represent the current state of the Stanza resource.
