Introduce configuration CRD for the plugin

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,6 +3,7 @@
 # It should be run by config/default
 resources:
 - bases/pgbackrest.dalibo.com_stanzas.yaml
+- bases/pgbackrest.dalibo.com_pluginconfigs.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
